# phil-docstrings

./: .gitignore  README.md  pyproject.toml  setup.py
src/phil_docstrings/: __init__.py  interface.py  model.py  parser.py  prompt.py  types.py
