# Packaging
# ---------

[build-system]
requires = ["setuptools>=67.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "phil-docstrings"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "attrs>=25.4.0",
    "click>=8.3.1",
    "google-generativeai>=0.8.5",
]

[project.scripts]
phil = "phil_docstrings.interface:run"

# Setuptools-SCM
# --------------
[tool.setuptools_scm]
version_file = "src/phil_docstrings/_scm_version.py"
